Fix propositions bug not showing the correct alignment

--- a/WebApp/client/styles.css
+++ b/WebApp/client/styles.css
@@ -750,6 +750,10 @@ label:nth-of-type(1):hover  ~ .explainLabelAboveType2Iteration2:before{ content:
     align-items: center;
 }
 
+.list-group svg {
+    vertical-align: middle;
+}
+
 /* start - highlight css */
 
 .highlight-blue.highlight-blue {
